return to Silver8Light version

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,11 +1,9 @@
-// font-family: 'Roboto', sans-serif;
-// font-family: 'PT Serif', serif;
+$text: #b7c3c8;
+$orange: #e74c3c;
+$green: #8bc34a;
+$fon: #263238;
 
 $roboto: 'Roboto', sans-serif;
-$pt-serif: 'PT Serif', serif;
-$myriad: 'Myriad', sans-serif;
-
-$yellow: #ffc222;
-$title: #212020;
-$subtitle: #5e5e5e;
-$form: #282828;
+$open: 'Open Sans', sans-serif;
+$ral: 'Raleway', sans-serif;
+$lato: 'Lato', sans-serif;
