--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,27 +1,15 @@
 @font-face {
-  font-family: 'MyriadPro';
-  src: url('../fonts/MyriadPro-Regular');
-  src: url('../fonts/MyriadPro-Regular') format('embedded-opentype'),
-    url('../fonts/MyriadPro-Regular') format('truetype'),
-    url('../fonts/MyriadPro-Regular') format('woff'),
-  // font-weight: normal;
-  // font-style: normal;
-}
-
-
-@font-face {
   font-family: 'icomoon';
-  src: url('../fonts/icomoon.eot?cwbpxr');
-  src: url('../fonts/icomoon.eot?cwbpxr#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?cwbpxr') format('truetype'),
-    url('../fonts/icomoon.woff?cwbpxr') format('woff'),
-    url('../fonts/icomoon.svg?cwbpxr#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?1ugxq3');
+  src:  url('../fonts/icomoon.eot?1ugxq3#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?1ugxq3') format('truetype'),
+    url('../fonts/icomoon.woff?1ugxq3') format('woff'),
+    url('../fonts/icomoon.svg?1ugxq3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -36,38 +24,156 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+  content: "\f002";
+}
 .icon-envelope-o:before {
   content: "\f003";
 }
-
-.icon-check:before {
-  content: "\f00c";
+.icon-star:before {
+  content: "\f005";
 }
-
+.icon-user:before {
+  content: "\f007";
+}
+.icon-th-large:before {
+  content: "\f009";
+}
+.icon-th-list:before {
+  content: "\f00b";
+}
+.icon-close:before {
+  content: "\f00d";
+}
+.icon-remove:before {
+  content: "\f00d";
+}
+.icon-times:before {
+  content: "\f00d";
+}
+.icon-lock:before {
+  content: "\f023";
+}
 .icon-map-marker:before {
   content: "\f041";
 }
-
+.icon-edit:before {
+  content: "\f044";
+}
+.icon-pencil-square-o:before {
+  content: "\f044";
+}
+.icon-shopping-cart:before {
+  content: "\f07a";
+}
+.icon-twitter-square:before {
+  content: "\f081";
+}
+.icon-heart-o:before {
+  content: "\f08a";
+}
+.icon-linkedin-square:before {
+  content: "\f08c";
+}
 .icon-phone:before {
   content: "\f095";
 }
-
-.icon-briefcase:before {
-  content: "\f0b1";
+.icon-twitter:before {
+  content: "\f099";
 }
-
-.icon-angle-left:before {
-  content: "\f104";
+.icon-facebook:before {
+  content: "\f09a";
 }
-
+.icon-facebook-f:before {
+  content: "\f09a";
+}
+.icon-bell-o:before {
+  content: "\f0a2";
+}
+.icon-bars:before {
+  content: "\f0c9";
+}
+.icon-navicon:before {
+  content: "\f0c9";
+}
+.icon-reorder:before {
+  content: "\f0c9";
+}
+.icon-pinterest:before {
+  content: "\f0d2";
+}
+.icon-caret-down:before {
+  content: "\f0d7";
+}
+.icon-caret-up:before {
+  content: "\f0d8";
+}
+.icon-linkedin:before {
+  content: "\f0e1";
+}
+.icon-comment-o:before {
+  content: "\f0e5";
+}
+.icon-bolt:before {
+  content: "\f0e7";
+}
+.icon-flash:before {
+  content: "\f0e7";
+}
 .icon-angle-right:before {
   content: "\f105";
 }
-
 .icon-angle-down:before {
   content: "\f107";
 }
-
-.icon-quote-right:before {
-  content: "\f10e";
+.icon-mail-reply:before {
+  content: "\f112";
+}
+.icon-reply:before {
+  content: "\f112";
+}
+.icon-meh-o:before {
+  content: "\f11a";
+}
+.icon-star-half-empty:before {
+  content: "\f123";
+}
+.icon-star-half-full:before {
+  content: "\f123";
+}
+.icon-star-half-o:before {
+  content: "\f123";
+}
+.icon-location-arrow:before {
+  content: "\f124";
+}
+.icon-cny:before {
+  content: "\f157";
+}
+.icon-jpy:before {
+  content: "\f157";
+}
+.icon-rmb:before {
+  content: "\f157";
+}
+.icon-yen:before {
+  content: "\f157";
+}
+.icon-sort-amount-desc:before {
+  content: "\f161";
+}
+.icon-youtube-play:before {
+  content: "\f16a";
+}
+.icon-foursquare:before {
+  content: "\f180";
+}
+.icon-pagelines:before {
+  content: "\f18c";
+}
+.icon-facebook-official:before {
+  content: "\f230";
+}
+.icon-pinterest-p:before {
+  content: "\f231";
 }
