added tabs and author portfolio on product-details page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,3 +3,7 @@
 @import "global";
 @import "header";
 @import "footer";
+
+@import "all-items";
+@import "_upload-product";
+@import "_product-details";
