--- a/app/scss/libs.scss
+++ b/app/scss/libs.scss
@@ -2,5 +2,12 @@
 @import "app/libs/jquery.fancybox";
 @import "app/libs/slick";
 @import "app/libs/bootstrap-grid";
+@import "node_modules/ion-rangeslider/css/ion.rangeSlider";
+@import "node_modules/jquery-form-styler/dist/jquery.formstyler.theme";
+@import "node_modules/jquery-form-styler/dist/jquery.formstyler";
+
+
+
+
 
 
