--- a/app/scss/_product-details.scss
+++ b/app/scss/_product-details.scss
@@ -7,8 +7,10 @@
 
 .tabs__wrapper {
   background-color: #fff;
-  margin: 0 -15px 52px;
+  margin: 0 0 52px -15px;
   border: 1px solid #dfdfdf;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .tab {
@@ -73,7 +75,7 @@
 }
 
 .author-portfolio {
-  margin: 0 -15px;
+  margin-left: -15px;
 }
 .author-portfolio__title {
   border: 1px solid #dfdfdf;
@@ -89,6 +91,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 -15px;
+  justify-content: space-between;
 }
 
 .author-portfolio__item {
@@ -125,4 +128,43 @@
   font-size: 18px;
   font-weight: 500;
   color: $fon;
+}
+
+
+
+@media (max-width: 992px) {
+
+  .tabs__wrapper {
+    background-color: #fff;
+    margin: 0 -15px 52px;
+  }
+
+  .author-portfolio {
+    margin: 0 -15px;
+}
+
+.tab-content {
+  width: 100%;
+}
+
+.tab-item ul.features {
+
+	flex-wrap: nowrap;
+
+}
+
+.tab-item:first-child {
+    overflow: auto;
+}
+.tab-item .features li {
+  display: block;
+}
+}
+
+
+
+@media (max-width: 576px) {
+  .author-portfolio__item-wrapper {
+    justify-content: flex-start;
+  }
 }
