--- a/app/scss/_product-details.scss
+++ b/app/scss/_product-details.scss
@@ -100,13 +100,12 @@
   display: flex;
   &-wrapper {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     background-color: #fff;
     .item-info {
       display: inline-block;
-      padding: 0 21px;
+      padding: 15px 0 10px 21px;
     }
   }
 }
