--- a/app/scss/_product-details.scss
+++ b/app/scss/_product-details.scss
@@ -1,5 +1,9 @@
 @import "vars";
 
+* {
+  outline: none
+}
+
 .product-details {
   background-color: #f4f6f5;
   padding: 50px 0;
@@ -7,7 +11,7 @@
 
 .tabs__wrapper {
   background-color: #fff;
-  margin: 0 0 52px -15px;
+  margin-bottom: 52px;
   border: 1px solid #dfdfdf;
   display: flex;
   flex-wrap: wrap;
@@ -74,9 +78,6 @@
   }
 }
 
-.author-portfolio {
-  margin-left: -15px;
-}
 .author-portfolio__title {
   border: 1px solid #dfdfdf;
   font-size: 18px;
@@ -114,13 +115,11 @@
   font-size: 14px;
   font-weight: 500;
   color: $fon;
-  margin-bottom: 7px;
 }
 
 .item-info__category {
   font-size: 12px;
   color: $green;
-  margin-bottom: 10px;
 }
 
 .item-info__price {
@@ -135,12 +134,9 @@
 
   .tabs__wrapper {
     background-color: #fff;
-    margin: 0 -15px 52px;
+    margin-bottom:  52px;
   }
 
-  .author-portfolio {
-    margin: 0 -15px;
-}
 
 .tab-content {
   width: 100%;
@@ -165,5 +161,379 @@
 @media (max-width: 576px) {
   .author-portfolio__item-wrapper {
     justify-content: flex-start;
+  }
+}
+
+
+
+
+
+// ==================================================================
+// ==================================================================
+// ==================================================================
+// ==================================================================
+
+
+
+
+.box-price,
+.box-author,
+.cart,
+.product-information {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  background-color: #fff;
+  border: solid 1px $grey_border;
+  padding: 0px 30px 30px;
+  margin-bottom: 30px;
+  font-family: $roboto;
+  color: #000;
+}
+
+.box-price-title,
+.product-information-title {
+  font-size: 20px;
+  line-height: 60px;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.box-line {
+  width: 210px;
+  height: 1px;
+  background-color: #dde3e8;
+}
+
+.price-section,
+.author-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.price-section, {
+  flex-wrap: wrap;
+}
+
+.price {
+  color: #E74C3C;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 40px;
+}
+
+.select-reg {
+  height: 27px;
+  width: 82px;
+  border: solid 1px $grey_border;
+}
+
+.price-buttons {
+  margin-top: 30px;
+  
+  button {
+    cursor: pointer;
+    border: none;
+    height: 50px;
+    width: 210px;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 7px;
+    color: #fff;
+    box-shadow: 0 1px 2px #455a64bf;
+  }
+}
+
+.addtocart-button {
+  background-color: #8bc34a;
+  position: relative;
+  padding-left: 24px;
+
+  &:before {
+    position: absolute;
+    font-family: 'icomoon';
+    content: "\f07a";
+    left: 46px;
+  }
+}
+
+.addtofavourites-button {
+  position: relative;
+  background-color: #42a5f5;
+  padding-left: 24px;
+
+  &:before {
+    position: absolute;
+    font-family: 'icomoon';
+    content: "\f08a";
+    left: 24px;
+  }
+
+}
+
+.buynow-button {
+  background-color: #546e7a;
+}
+
+.price-square {
+  width: 73px;
+  height: 63px;
+  background-color: #D4D4D4;
+  margin-right: 15px;
+}
+
+.author-section {
+  margin-top: 25px;
+  justify-content: flex-start;
+}
+
+.psdboss {
+  font-size: 18px;
+  margin-left: -25px;
+}
+
+.square-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.profile-button {
+  font-weight: 500;
+  font-size: 13px;
+  color: #707070;
+  border: solid 1px #d6d6d6;
+  padding: 9px 17px 9px 10px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+
+  img {
+    margin-right: 8px;
+  }
+}
+
+.icons-shield {
+  color: #fff;
+  font-size: 20px;
+  font-family: 'icomoon';
+  margin-right: 20px;
+  margin-left: -33px;
+  margin-top: 5px;
+}
+
+.icon-bolt,
+.icon-foursquare,
+.icon-cny {
+  margin-right: 20px;
+  margin-left: -30px;
+}
+
+
+// .orange-shield:before {
+// 	font-family: 'icomoon';
+// 	content: "\f11a";
+// }
+
+
+// .{
+// 	    margin-right: 20px;
+// 	    margin-left: -31px;
+// }
+.cart {
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.cart-number {
+  font-size: 20px;
+  font-weight: bold;
+  padding-right: 20px;
+
+}
+
+.cart-number:before {
+  font-family: 'icomoon';
+  content: "\f07a";
+  padding-right: 20px;
+  color: #D4D4D4;
+}
+
+.cart-sign {
+  font-weight: lighter;
+  font-size: 16px;
+  color: #707070;
+}
+
+.list-info {
+  padding-top: 20px;
+  font-size: 14px;
+  color: #70838d;
+
+  li {
+    padding-top: 10px;
+  }
+
+  span {
+    font-weight: 500;
+    color: #000;
+    padding-top: 10px;
+  }
+}
+
+.info-title-list {
+  font-weight: 500;
+}
+
+
+// ===================================
+select {
+  appearance: none;
+  font-size: 13px;
+  color: #70838d;
+  border-color: #d6d6d6;
+  padding: 6px 20px 6px 10px;
+  cursor: pointer;
+}
+
+label {
+  position: relative;
+  display: inline-block;
+}
+
+label:after {
+  border: 4px solid transparent;
+  border-top: 4px solid $green;
+  content: '';
+  position: absolute;
+  right: 11px;
+  top: 50%;
+  transform: translateY(-25%);
+  z-index: 1;
+  pointer-events: none;
+}
+
+
+
+
+// ==================================================================
+// ==================================================================
+// ==================================================================
+// ==================================================================
+
+
+
+
+
+.middle__img {
+  background-color: #fff;
+  padding: 16px 20px;
+  margin-bottom: 36px;
+  img {
+    width: 100%;
+  }
+}
+
+.middle__title {
+  font-family: $roboto;
+  font-size: 30px;
+  color: #263238;
+  line-height: 40px;
+  font-weight: 500;
+  padding-bottom: 28px;
+}
+
+.middle__text {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  font-family: $roboto;
+  color: #707070;
+  padding-bottom: 43px;
+}
+
+.middle__items {
+  display: flex;
+  padding-bottom: 53px;
+}
+
+.middle__social {
+  margin-left: auto;
+}
+
+.middle__btn {
+  button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-family: $roboto;
+    font-weight: 500;
+    font-size: 16px;
+    color: #f4f6f5;
+    padding: 17px 21px;
+    min-width: 137px;
+
+    &+button {
+      margin-left: 19px;
+    }
+  }
+
+  .middle__btn__live {
+    background-color: #e74c3c;
+  }
+
+  .middle__btn__screen {
+    background-color: #455a64;
+    padding: 17px 32px;
+  }
+
+  .middle__btn__doc {
+    background-color: #8bc34a;
+  }
+
+}
+
+.middle__social {
+  a {
+    min-width: 55px;
+    background-color: red;
+    text-align: center;
+  }
+
+  span {
+    font-size: 18px;
+    line-height: 50px;
+    color: #fff;
+  }
+
+  .middle__social__face {
+    background-color: #6370b6;
+  }
+
+  .middle__social__twit {
+    background-color: #64b5f6;
+  }
+
+  .middle__social__link {
+    background-color: #4f71ce;
+  }
+
+  .middle__social__pin {
+    background-color: #d32f2f;
   }
 }
