--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,8 +1,12 @@
 $text: #b7c3c8;
 $orange: #e74c3c;
+$red: #e95d50;
 $green: #8bc34a;
 $fon: #263238;
 $border: #dedede;
+$black: #000;
+$grey_border: #dcdcdc;
+
 
 $roboto: 'Roboto', sans-serif;
 $open: 'Open Sans', sans-serif;
