--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 @import "header";
 @import "footer";
 
-@import "all-items";
+@import "_all-items";
 @import "_upload-product";
 @import "_product-details";
+@import "media"
